--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "dependencies": {
         "vue-axios": "^3.5.2",
-        "vue-router": "^4.0.13"
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.2.2",
+        "vuex": "^4.1.0",
+        "vuex-persistedstate": "^4.1.0"
     }
 }
