--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.2.2",
+        "vue-sweetalert2": "^5.0.5",
         "vuex": "^4.1.0",
         "vuex-persistedstate": "^4.1.0"
     }
