--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=securebank.database.windows.net
-DB_PORT=1433
+DB_HOST=DESKTOP-1B2G5SB
+DB_PORT=null
 DB_DATABASE=securebank
 DB_USERNAME=securebank
-DB_PASSWORD=Itca2023.
+DB_PASSWORD=Password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
