--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6m4NdgxfRdpTz8HC7Lf7OQ4KYAc+jcxIZaCwUqYlukU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=securebankvue
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlsrv
+DB_HOST=securebank.database.windows.net
+DB_PORT=1433
+DB_DATABASE=securebank
+DB_USERNAME=securebank
+DB_PASSWORD=Itca2023.
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,14 +28,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=securebank.sv@gmail.com
+MAIL_PASSWORD=hhvtcxkfsgozyyhg
+MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME=SecureBank
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -56,3 +55,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SANCTUM_STATEFUL_DOMAINS=localhost:8000
+
+SESSION_DOMAIN=localhost
+
+TWILIO_ACCOUNT_SID=AC0ef99e402f8687d0bf5ce42558d6d7a8
+TWILIO_AUTH_TOKEN=069e5c2c06b9e71ef6bda3cb8d21d0c3
