--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=DESKTOP-1B2G5SB
+DB_HOST=localhost
 DB_PORT=null
 DB_DATABASE=securebank
-DB_USERNAME=securebank
-DB_PASSWORD=Password
+DB_USERNAME=kath
+DB_PASSWORD=12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
