Flujo con tarjetas de credito completo

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=sqlsrv
 DB_HOST=localhost
 DB_PORT=null
 DB_DATABASE=securebank
-DB_USERNAME=kath
-DB_PASSWORD=12345
+DB_USERNAME=securebank
+DB_PASSWORD=Password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
