Conexion Azure, Fix Telefono Mask

--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=localhost
-DB_PORT=null
+DB_HOST=securebanksql.database.windows.net
+DB_PORT=1433
 DB_DATABASE=securebank
 DB_USERNAME=securebank
-DB_PASSWORD=Password
+DB_PASSWORD=Password!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
